--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="card-body">
               <img class="card-img-top" src="/asset/gadgets-website.png" alt="Police Gadgets Website photo" style="width:100%">
               <h4 class="card-title big-text">Gadgets Website</h4>
-              <p class="card-text">View a full list of Commands for Spectre bot on our command list page!</p>
+              <p class="card-text">This site is David Dexter's, where he has been supplying Gadgets and supporting PD development for a long time.</p>
               <a href="https://onestate.fun/police/files "class="btn btn-discord btn-block stretched-link "target="_blank">View website</a>
             </div>
         </div>
