Repaired lot of bugs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Open Graph tags -->
     <meta property="og:title" content="OneState Police Faction"/>
     <meta property="og:url" content="https://police.onestate.fun/"/>
-    <meta property="og:image" content="Gadgets | Informaton | Tutorials and more!"/>
+    <meta property="og:image" content="/asset/favicon.png"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="Gadgets website for police offciers!"/>
 
@@ -131,7 +131,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <a class="navbar-brand" href="https://police.onestate.fun"><b>&#169; 2023 | OneState Police Faction</b></a>
+            <h2 class="nav-link" href="https://police.onestate.fun"><span style="color: white;"><b>&#169; 2023 | OneState Police Faction</span></b></h2>
         </div>
     </nav>
 
