--- a/rules/index.html
+++ b/rules/index.html
@@ -35,9 +35,9 @@
     <!-- Open Graph tags -->
     <meta property="og:title" content="OneState Police Faction"/>
     <meta property="og:url" content="https://police.onestate.fun/"/>
-    <meta property="og:image" content="Gadgets | Informaton | Tutorials and more!"/>
+    <meta property="og:image" content="/asset/favicon.png"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="Gadgets website for police offciers!"/>
+    <m
 
   </head>
   <body class="bg-dark">
@@ -126,7 +126,7 @@
                             <h4 class="card-title big-text">Green Zone at HP - Hospital</h4>
                             <!-- Command Description -->
                             <p>Inside the hospital you never can't arrest. (inside hospital is safe place to chill out with other players)</p>
-                            <p>Outside and near hospital is green zone, when you see breaking RP rules, like Car killing (VDM/DB), collect evidence in photo or better in video form and report it to Admins.</p>
+                            <p>Outside and near hospital is green zone. When you see breaking RP rules, like Car killing (VDM/DB), collect evidence in photo or better in video form and report it to Admins.</p>
                             <p>Don't arrest borned criminals outside HP, give them 10 min to breath.</p>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
 <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
     <div class="container">
         <!-- Bot/Brand Name -->
-        <a class="navbar-brand" href="https://police.onestate.fun"><b>&#169; 2023 | OneState Police Faction</b></a>
+        <h2 class="nav-link" href="https://police.onestate.fun"><span style="color: white;"><b>&#169; 2023 | OneState Police Faction</span></b></h2>
     </div>
 </nav>
 
