--- a/info/index.html
+++ b/info/index.html
@@ -36,9 +36,9 @@
     <!-- Open Graph tags -->
     <meta property="og:title" content="OneState Police Faction"/>
     <meta property="og:url" content="https://police.onestate.fun/"/>
-    <meta property="og:image" content="Gadgets | Informaton | Tutorials and more!"/>
+    <meta property="og:image" content="/asset/favicon.png"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="Gadgets website for police offciers!"/>
+
 
   </head>
   <body class="bg-dark">
@@ -148,7 +148,6 @@
                             <!-- Version -->
                             <h4 class="card-title big-text">Police Radio</h4>
                             <!-- Version Description -->
-                            <p>Divided into 3 categories:</p>
                             <p>Use command <i><strong>/flobby your text</strong></i></p>
                             </div>
                         </div>
@@ -187,7 +186,7 @@
 <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
     <div class="container">
         <!-- Bot/Brand Name -->
-        <a class="navbar-brand" href="https://police.onestate.fun"><b>&#169; 2023 | OneState Police Faction</b></a>
+        <h2 class="nav-link" href="https://police.onestate.fun"><span style="color: white;"><b>&#169; 2023 | OneState Police Faction</span></b></h2>
     </div>
 </nav>
 
