--- a/index.html
+++ b/index.html
@@ -113,19 +113,31 @@
         </div>
     </div>
     <div class="container container-1">
-    <div class="row">
-        <h1 class="brand-line"><b>Other:</b></h1>
-</div>
-    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+        <div class="row">
+            <h1 class="brand-line"><b>Other:</b></h1>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
         <div class="card bg-grey" style="width:100%">
             <div class="card-body">
               <img class="card-img-top" src="/asset/gadgets-website.png" alt="Police Gadgets Website photo" style="width:100%">
               <h4 class="card-title big-text">Gadgets Website</h4>
               <p class="card-text">This site is David Dexter's, where he has been supplying Gadgets and supporting PD development for a long time.</p>
-              <a href="https://onestate.fun/police/files "class="btn btn-discord btn-block stretched-link "target="_blank">View website</a>
+              <a href="https://onestate.fun/police/files"class="btn btn-discord btn-block stretched-link "target="_blank">View website</a>
             </div>
         </div>
     </div> 
+    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+        <div class="card bg-grey" style="width:100%">
+            <div class="card-body">
+              <img class="card-img-top" src="/asset/feedback-page.png" alt="Feedback page photo" style="width:100%">
+              <h4 class="card-title big-text">Feedback</h4>
+              <p class="card-text">We'd love it if you'd rate this site for us. Fill out a simple form with a few clicks. It only takes a minute.</p>
+              <a href="/feedback"class="btn btn-discord btn-block stretched-link "target="_blank">Rate this website</a>
+            </div>
+        </div>
+    </div> 
+    </div>
 </div>
         
     <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
