--- a/info/index.html
+++ b/info/index.html
@@ -97,6 +97,7 @@
                             <p><strong>Criminal 20 minutes</strong> starting with 1._</p>
                             <p><strong>Civil 10 minutes</strong> starting with 2._</p>
                             <p><strong>Administartive 5 minutes</strong> starting with 3._</p>
+                            <p>You can check all violations <a href="https://discord.com/channels/964553655955103804/1012293013961195611" target="_blank">here</a></p>
                             </div>
                         </div>
                     </div>
