--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <img class="card-img-top" src="/asset/feedback-page.png" alt="Feedback page photo" style="width:100%">
               <h4 class="card-title big-text">Feedback</h4>
               <p class="card-text">We'd love it if you'd rate this site for us. Fill out a simple form with a few clicks. It only takes a minute.</p>
-              <a href="/feedback"class="btn btn-discord btn-block stretched-link "target="_blank">Rate this website</a>
+              <a href="/feedback"class="btn btn-discord btn-block stretched-link">Rate this website</a>
             </div>
         </div>
     </div> 
