--- a/info/index.html
+++ b/info/index.html
@@ -35,7 +35,7 @@
 
     <!-- Open Graph tags -->
     <meta property="og:title" content="OneState Police Faction"/>
-    <meta property="og:url" content="https://police.onestate.fun/"/>
+    <meta property="og:url" content="https://pd.onestate.fun/"/>
     <meta property="og:image" content="/asset/favicon.png"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="Police system information, Police menu, features... click and see. For newbies this page is useful :)."/>
@@ -97,7 +97,7 @@
                             <p><strong>Criminal 20 minutes</strong> starting with 1._</p>
                             <p><strong>Civil 10 minutes</strong> starting with 2._</p>
                             <p><strong>Administartive 5 minutes</strong> starting with 3._</p>
-                            <p>You can check all violations <a href="https://discord.com/channels/964553655955103804/1012293013961195611" target="_blank">here</a></p>
+                            <p>You can check all violations <a href="https://onestate.fun/police/violations" target="_blank">here</a></p>
                             </div>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                             <!-- Version -->
                             <h4 class="card-title big-text">Police Radio</h4>
                             <!-- Version Description -->
-                            <p>Use command <i><strong>/flobby your text</strong></i></p>
+                            <p>Use command <strong>/flobby <i>your text</strong></i></p>
                             </div>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
 <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
     <div class="container">
         <!-- Bot/Brand Name -->
-        <h2 class="nav-link" href="https://police.onestate.fun"><span style="color: white;"><b>&#169; 2023 | OneState Police Faction</span></b></h2>
+        <h2 class="nav-link" href="https://pd.onestate.fun"><span style="color: white;"><b>&#169; 2023 | OneState Police Faction</span></b></h2>
     </div>
 </nav>
 
