--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- Open Graph tags -->
     <meta property="og:title" content="OneState Police Faction"/>
-    <meta property="og:url" content="https://police.onestate.fun/"/>
+    <meta property="og:url" content="https://pd.onestate.fun/"/>
     <meta property="og:image" content="/asset/favicon.png"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="Gadgets website for police offciers!"/>
@@ -143,7 +143,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <h2 class="nav-link" href="https://police.onestate.fun"><span style="color: white;"><b>&#169; 2023 | OneState Police Faction</span></b></h2>
+            <h2 class="nav-link" href="https://pd.onestate.fun"><span style="color: white;"><b>&#169; 2023 | OneState Police Faction</span></b></h2>
         </div>
     </nav>
 
