--- a/rules/index.html
+++ b/rules/index.html
@@ -34,7 +34,7 @@
 
     <!-- Open Graph tags -->
     <meta property="og:title" content="OneState Police Faction"/>
-    <meta property="og:url" content="https://police.onestate.fun/"/>
+    <meta property="og:url" content="https://pd.onestate.fun/"/>
     <meta property="og:image" content="/asset/favicon.png"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="If you want to check out the rules and some information for newbies, feel free to take a look. Rules for low ranks."/>
@@ -247,7 +247,7 @@
 <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
     <div class="container">
         <!-- Bot/Brand Name -->
-        <h2 class="nav-link" href="https://police.onestate.fun"><span style="color: white;"><b>&#169; 2023 | OneState Police Faction</span></b></h2>
+        <h2 class="nav-link" href="https://pd.onestate.fun"><span style="color: white;"><b>&#169; 2023 | OneState Police Faction</span></b></h2>
     </div>
 </nav>
 
