shortcuts, performance and repairs update

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                         <a class="nav-link" href="/info">Informaton</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/shortcuts" target="_blank">Shortcuts</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="https://onestate.fun/police/files" target="_blank">Gadgets Website</a>
                     </li>
                 </ul>
@@ -82,18 +85,18 @@
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                      <img class="card-img-top" src="asset/discord-invite-2.png" alt="Support Server" style="width:100%">
-                      <h4 class="card-title big-text">Police Discord</h4>
-                      <p class="card-text">Are you a cop? And you need access to the police server? Fill out the Check in and get access to police data!</p>
+                      <img class="card-img-top" src="/asset/shortcuts-page.png" alt="Support Server" style="width:100%">
+                      <h4 class="card-title big-text">Shortcuts</h4>
+                      <p class="card-text">A very useful page with lots of Shortcuts. You can find macros lists, teach videos and lot more!</p>
                       <!-- Change link to your support server link -->
-                      <a href="https://discord.gg/pm78NwAdWT" target="_blank" class="btn btn-discord btn-block stretched-link">Join our Police server</a>
+                      <a href="/shortcuts" class="btn btn-discord btn-block stretched-link">View page</a>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                      <img class="card-img-top" src="/asset/Rules-page.png" alt="Rules and info page photo" style="width:100%">
+                      <img class="card-img-top" src="/asset/rules-page.png" alt="Rules and info page photo" style="width:100%">
                       <h4 class="card-title big-text">Rules and Info</h4>
                       <p class="card-text">If you want to check out the rules and some information for newbies, feel free to take a look. Rules for low ranks.</p>
                       <a href="/rules" class="btn btn-discord btn-block stretched-link">View page</a>
@@ -127,6 +130,17 @@
             </div>
         </div>
     </div> 
+    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                <div class="card bg-grey" style="width:100%">
+                    <div class="card-body">
+                      <img class="card-img-top" src="asset/discord-invite-2.png" alt="Support Server" style="width:100%">
+                      <h4 class="card-title big-text">Police Discord</h4>
+                      <p class="card-text">Are you a cop? And you need access to the police server? Fill out the Check in and get access to police data!</p>
+                      <!-- Change link to your support server link -->
+                      <a href="https://discord.gg/pm78NwAdWT" target="_blank" class="btn btn-discord btn-block stretched-link">Join our Police server</a>
+                    </div>
+                </div>
+            </div>
     <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
         <div class="card bg-grey" style="width:100%">
             <div class="card-body">
