--- a/info/index.html
+++ b/info/index.html
@@ -67,6 +67,9 @@
                         <a class="nav-link" href="/info">Informaton</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/shortcuts" target="_blank">Shortcuts</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="https://onestate.fun/police/files" target="_blank">Gadgets Website</a>
                     </li>
                 </ul>
