--- a/rules/index.html
+++ b/rules/index.html
@@ -66,6 +66,9 @@
                         <a class="nav-link" href="/info">Informaton</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/shortcuts" target="_blank">Shortcuts</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="https://onestate.fun/police/files" target="_blank">Gadgets Website</a>
                     </li>
                 </ul>
@@ -94,7 +97,7 @@
                             <p>have 3 floors (f0, f1, f2)</p>
                                <p> f0 is garage, arsenal room, hospital..</p>
                                <p> f1 is jail room, waiting room for interview, kitchen..</p>
-                              <p>  f2 is mission room, meeting room, offices..</p>
+                               <p> f2 is mission room, meeting room, offices..</p>
                             </div>
                         </div>
                     </div>
@@ -202,7 +205,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                         <div class="card bg-grey" style="width:100%">
                             <div class="card-body">
-                                <img class="card-img-top" src="/asset/parking-in-garage.png" alt="Commands" style="width:100%">
+                                <img class="card-img-top" src="/asset/parking-in-garage.png" alt="Parking at Garage" style="width:100%">
                             <!-- Command -->
                             <h4 class="card-title big-text">Parking</h4>
                             <!-- Command Description -->
