--- a/feedback/index.html
+++ b/feedback/index.html
@@ -57,7 +57,7 @@
                 <ul class="navbar-nav">
                     <!-- Change link to your support server link -->
                     <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://discord.gg/pm78NwAdWT" target="_blank">Join our Police server</a>
+                    <a class="nav-link" href="https://discord.gg/pm78NwAdWT" target="_blank">Join our Police server</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/rules">Rules</a>
@@ -66,7 +66,7 @@
                         <a class="nav-link" href="/info">Informaton</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/shortcuts" target="_blank">Shortcuts</a>
+                        <a class="nav-link" href="/shortcuts">Shortcuts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://onestate.fun/police/files" target="_blank">Gadgets Website</a>
