--- a/feedback/index.html
+++ b/feedback/index.html
@@ -37,7 +37,7 @@
     <meta property="og:url" content="https://pd.onestate.fun/"/>
     <meta property="og:image" content="/asset/favicon.png"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="We'd love it if you'd rate this site for us. Fill out a simple form with a few clicks. It only takes a minute."/>
+    <meta property="og:description" content="Rate this website | We'd love it if you'd rate this site for us. Fill out a simple form with a few clicks. It only takes a minute."/>
 
   </head>
   <body class="bg-dark">
