added gadgets web to shortcuts

--- a/shortcuts/index.html
+++ b/shortcuts/index.html
@@ -135,6 +135,16 @@
                           <a href="https://onestate.fun/police/dm" target="_blank" class="btn btn-discord btn-block stretched-link">View DM Message</a>
                         </div>
                     </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+                        <div class="card bg-grey" style="width:100%">
+                            <div class="card-body">
+                              <h4 class="card-title big-text">Gadgets Website</h4>
+                              <p class="card-text">This site is David Dexter's, where he has been supplying Gadgets and supporting PD development for a long time.</p>
+                              <!-- Change link to your support server link -->
+                              <a href="https://onestate.fun/police/files" target="_blank" class="btn btn-discord btn-block stretched-link">View Gadgets Website</a>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
