--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta property="og:url" content="https://pd.onestate.fun/"/>
     <meta property="og:image" content="/asset/favicon.png"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="Gadgets website for police offciers!"/>
+    <meta property="og:description" content="Gadgets website for police officers!"/>
 
   </head>
   <body class="bg-dark">
