--- a/rules/index.html
+++ b/rules/index.html
@@ -209,7 +209,7 @@
                             <!-- Command -->
                             <h4 class="card-title big-text">Parking</h4>
                             <!-- Command Description -->
-                            <p>Do not park vehicles inside these floor 0 areas (<a href="https://ibb.co/pxJckLM" target="_blank">photo</a>). Keep them free for pedestrain area and patrols.</p>
+                            <p>Do not park vehicles inside these floor 0 garage areas (<a href="https://ibb.co/pxJckLM" target="_blank">photo</a>). Keep them free for pedestrain area and patrols.</p>
                             <p>Park your personal vehicles next to private car spawn.</p>
                             <p>Do not park on police car spawns.</p>
                             <p>Do not block the exit.</p>
