--- a/info/index.html
+++ b/info/index.html
@@ -64,7 +64,7 @@
                         <a class="nav-link" href="/rules">Rules</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/info">Informaton</a>
+                        <a class="nav-link" href="/info">Information</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/shortcuts">Shortcuts</a>
@@ -78,7 +78,7 @@
     </nav>
     <div class="container container-1">
         <div class="row">
-            <h1 class="title-line"><b>Infomration:</b></h1>
+            <h1 class="title-line"><b>Information:</b></h1>
             <!-- These are dummy versions | They don't actually exist for Spectre if you choose to install it -->
             <!-- The dates noted as update dates are dummy dates and mean nothing, update them with your update dates when you update your bot-->
         </div>
