--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a class="nav-link" href="/rules">Rules</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/info">Informaton</a>
+                        <a class="nav-link" href="/info">Information</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/shortcuts">Shortcuts</a>
