--- a/shortcuts/index.html
+++ b/shortcuts/index.html
@@ -130,7 +130,7 @@
                     <div class="card bg-grey" style="width:100%">
                         <div class="card-body">
                           <h4 class="card-title big-text">Training DM Message</h4>
-                          <p class="card-text">Discord DM message. This is for trainers to do their job. This message will be sended by trainers to their recruits to recruit's DM on Discord.</p>
+                          <p class="card-text">Discord DM Message is for trainers to do their job. This message will be sent by trainers to their recruits DMs on Discord.</p>
                           <!-- Change link to your support server link -->
                           <a href="https://onestate.fun/police/dm" target="_blank" class="btn btn-discord btn-block stretched-link">View DM Message</a>
                         </div>
