--- a/rules/index.html
+++ b/rules/index.html
@@ -94,10 +94,10 @@
                             <!-- Command -->
                             <h4 class="card-title big-text">PD - Police Department</h4>
                             <!-- Command Description -->
-                            <p>have 3 floors (f0, f1, f2)</p>
-                               <p> f0 is garage, arsenal room, hospital..</p>
-                               <p> f1 is jail room, waiting room for interview, kitchen..</p>
-                               <p> f2 is mission room, meeting room, offices..</p>
+                            <p>have 3 floors (F0, F1, F2)</p>
+                               <p> F0 is garage, arsenal room, hospital..</p>
+                               <p> F1 is jail room, waiting room for interview, kitchen..</p>
+                               <p> F2 is mission room, meeting room, offices..</p>
                             </div>
                         </div>
                     </div>
@@ -111,10 +111,10 @@
                             <!-- Command -->
                             <h4 class="card-title big-text">Basic RP - RolePlay</h4>
                             <!-- Command Description -->
-                            <p>If you die you must wait 15 min, after that you can go back to action.</p>
-                            <p>Don't use tazer for long distances and don't use it against deadly weapons.</p>
-                            <p>Drive safety to avoid VDM also named DB (DriveBy). When you cross someone stop, say sorry and make sure he is okay.</p>
-                            <p>For example, when it's You vs +3 Criminals, try find safe place and call in radio backup, Try not to be part of the fights until you get a higher rank.</p> 
+                            <p>If you die, you must wait 15 minutes; after that, you can go back to action.</p>
+                            <p>Don't use a taser for long distances, and don't use it against deadly weapons.</p>
+                            <p>Drive safely to avoid VDM, It is also called DB (DriveBy). When you cross someone, stop, say sorry, and make sure the person is okay.</p>
+                            <p>For example, when it's You vs. +3 Criminals, try to find a safe place and call backup in radio. Try not to be part of the fights until you get a higher rank.</p> 
                             </div>
                         </div>
                     </div>
@@ -128,9 +128,9 @@
                             <!-- Command -->
                             <h4 class="card-title big-text">Green Zone at HP - Hospital</h4>
                             <!-- Command Description -->
-                            <p>Inside the hospital you never can't arrest. (inside hospital is safe place to chill out with other players)</p>
-                            <p>Outside and near hospital is green zone. When you see breaking RP rules, like Car killing (VDM/DB), collect evidence in photo or better in video form and report it to Admins.</p>
-                            <p>Don't arrest borned criminals outside HP, give them 10 min to breath.</p>
+                            <p>Inside the hospital you can't arrest. (Inside the hospital is a safe place to chill out with other players.)</p>
+                            <p>Outside and near the hospital is the Green zone. When you see someone breaking RP rules, like Car killing (VDM or DB), collect evidence in photo or, better yet, video form and report it to Admins.</p>
+                            <p>Don't arrest borne criminals outside HP; give them some time to breath.</p>
                             </div>
                         </div>
                     </div>
@@ -144,8 +144,8 @@
                             <!-- Command -->
                             <h4 class="card-title big-text">Army Base</h4>
                             <!-- Command Description -->
-                            <p>You cannot go to Army Base without a good reason and permission by Rank 10+. You can ask by radio or on Discord server (make sure you talking with rank 10+)</p>
-                            <p>Army is our brothers, it's fun work with Army and protect our city.</p>
+                            <p>You cannot go to an Army Base without a good reason and permission from a rank 10 or higher. You can ask by radio or on the Discord server (make sure you're talking with a rank 10+).</p>
+                            <p>The Army is our brothers. It's fun to work with them and protect our city.</p>
                             </div>
                         </div>
                     </div>
@@ -159,11 +159,11 @@
                             <!-- Command -->
                             <h4 class="card-title big-text">Vacation</h4>
                             <!-- Command Description -->
-                            <p>You're still Police Officer on vacation and you must still follow rules on vacation.</p>
-                            <p>You cannot have any violations, in self defense you must have proofs otherwise you can get punishment.</p>
+                            <p>You're still a police officer, and you must still follow rules on vacation.</p>
+                            <p>You cannot have any violations; in self-defense, you must have proof; otherwise, you can get punished.</p>
                             <p>You can do civil jobs.</p>
-                            <p>You cannot enter f0 and f2. If you die you can spawn car and exit station or you can use elevator to go f1.</p>
-                            <p>You cannot take equipment from Arenal Room! No weapons, ammo, vests, etc.</p>
+                            <p>You cannot enter F0 and F2. If you die, you can spawn a car and exit station, or you can use the elevator to go to F1.</p>
+                            <p>You cannot take equipment from the Arsenal Room! No weapons, ammo, vests, etc.</p>
                             <p>Police Radio is allowed.</p>
                             </div>
                         </div>
@@ -178,8 +178,8 @@
                                 <!-- Command -->
                                 <h4 class="card-title big-text">Events</h4>
                                 <!-- Command Description -->
-                                <p>You cannot join Material Theft Event, even if you're on vacation.</p>
-                                <p>You can join Harbour Heist Event, but you can't use police cars there.</p>
+                                <p>You cannot join the Material Theft Event, even if you're on vacation.</p>
+                                <p>You can join the Harbour Heist Event, but you can't use police cars there.</p>
                                 </div>
                         </div>
                     </div>
@@ -193,8 +193,8 @@
                                 <!-- Command -->
                                 <h4 class="card-title big-text">Trainings</h4>
                                 <!-- Command Description -->
-                                <p>You cannot organize trainings.</p>
-                                <p>Trainings is leaded by ranks 10 and over or authorized rank 7+.</p>
+                                <p>You cannot organize trainings.You cannot organize trainings.</p>
+                                <p>Trainings are leaded by ranks 10 and over or authorized ranks 7+.</p>
                             </div>
                         </div>
                     </div>
@@ -209,9 +209,9 @@
                             <!-- Command -->
                             <h4 class="card-title big-text">Parking</h4>
                             <!-- Command Description -->
-                            <p>Do not park vehicles inside these floor 0 garage areas (<a href="https://ibb.co/pxJckLM" target="_blank">photo</a>). Keep them free for pedestrain area and patrols.</p>
-                            <p>Park your personal vehicles next to private car spawn.</p>
-                            <p>Do not park on police car spawns.</p>
+                            <p>Do not park vehicles inside these floor 0 garage areas (<a href="https://ibb.co/pxJckLM" target="_blank">photo</a>). Keep them free for the pedestrian area and patrols.</p>
+                            <p>Park your personal vehicles next to the private car park.</p>
+                            <p>Do not park on car spawns.</p>
                             <p>Do not block the exit.</p>
                             </div>
                         </div>
@@ -226,8 +226,8 @@
                                 <!-- Command -->
                                 <h4 class="card-title big-text">Special Missions</h4>
                                 <!-- Command Description -->
-                                <p>You cannot do any raid or cleaning wanted list missions.</p>
-                                <p>You cannot organize raids or Clearing Wanted List.</p>
+                                <p>You cannot do any raiding or clearing wanted list missions.</p>
+                                <p>You cannot organize raids or "clearing the wanted list".</p>
                             </div>
                         </div>
                     </div>
