--- a/rules/index.html
+++ b/rules/index.html
@@ -210,7 +210,7 @@
                             <h4 class="card-title big-text">Parking</h4>
                             <!-- Command Description -->
                             <p>Do not park vehicles inside these floor 0 garage areas (<a href="https://ibb.co/pxJckLM" target="_blank">photo</a>). Keep them free for the pedestrian area and patrols.</p>
-                            <p>Park your personal vehicles next to the private car park.</p>
+                            <p>Park your personal vehicles next to the private car spawn.</p>
                             <p>Do not park on car spawns.</p>
                             <p>Do not block the exit.</p>
                             </div>
