--- a/rules/index.html
+++ b/rules/index.html
@@ -226,7 +226,7 @@
                                 <!-- Command -->
                                 <h4 class="card-title big-text">Special Missions</h4>
                                 <!-- Command Description -->
-                                <p>You cannot do any raiding or clearing wanted list missions.</p>
+                                <p>You cannot do any raids or clearing wanted list missions.</p>
                                 <p>You cannot organize raids or "clearing the wanted list".</p>
                             </div>
                         </div>
