--- a/rules/index.html
+++ b/rules/index.html
@@ -193,7 +193,7 @@
                                 <!-- Command -->
                                 <h4 class="card-title big-text">Trainings</h4>
                                 <!-- Command Description -->
-                                <p>You cannot organize trainings.You cannot organize trainings.</p>
+                                <p>You cannot organize trainings.</p>
                                 <p>Trainings are leaded by ranks 10 and over or authorized ranks 7+.</p>
                             </div>
                         </div>
