--- a/info/index.html
+++ b/info/index.html
@@ -167,9 +167,9 @@
                             <h4 class="card-title big-text">Macros</h4>
                             <!-- Version Description -->
                             <p><a href="https://onestate.fun/police/videos" target="_blank">How modify macros</a></p>
-                            <p>You must have <a href="https://onestate.fun/police/macros" target="_blank">Macros</a></p>
+                            <p>You must have <a href="https://onestate.fun/police/macros" target="_blank">Required Macros</a></p>
                             <p>You must have <a href="https://onestate.fun/police/violations" target="_blank">Violations with jail time</a></p>
-                            <p>When you adding new macros, it's better and faster add: first <a href="https://onestate.fun/police/macros" target="_blank">Macros</a> and then <a href="https://onestate.fun/police/violations" target="_blank">Violations</a></p>
+                            <p>When you adding new macros, it's better and faster add: first <a href="https://onestate.fun/police/macros" target="_blank">Required Macros</a> and then <a href="https://onestate.fun/police/violations" target="_blank">Violations</a></p>
                             </div>
                         </div>
                     </div>
