--- a/feedback/index.html
+++ b/feedback/index.html
@@ -95,9 +95,27 @@
                             <div class="card-body">
                                 <!-- Command -->
                                 <p class="card-title big-text">Not working?</p>
-                                <h5>We direct you to the link.</h5>
+                                <p>We direct you to the link.</p>
                                 <!-- Command Description -->
                                 <p>Click - <a href="https://forms.gle/AKrpnbVywdSkVy1h7" target="_blank">Website Feedback Form</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="list-group-item">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                        <div class="card bg-grey" style="width:100%">
+                            <div class="card-body">
+                                <!-- Command -->
+                                <p class="card-title big-text">Contact</p>
+                                <p>Do you have any questions?</p>
+                                <!-- Command Description -->
+                                <p><strong>Contact Developer</strong>:</p>
+                                <p>Discord: <strong>thevida</strong></p>
+                                <p>Mail: <strong><a href="mailto:vida%40onestate.fun">vida&#064;onestate.fun</a></strong></p></p>
+
                             </div>
                         </div>
                     </div>
