--- a/info/index.html
+++ b/info/index.html
@@ -166,7 +166,7 @@
                             <!-- Version -->
                             <h4 class="card-title big-text">Macros</h4>
                             <!-- Version Description -->
-                            <p><a href="https://onestate.fun/police/videos" target="_blank">How modify macros</a></p>
+                            <p><a href="https://onestate.fun/police/videos" target="_blank">How to modify macros</a></p>
                             <p>You must have <a href="https://onestate.fun/police/macros" target="_blank">Required Macros</a></p>
                             <p>You must have <a href="https://onestate.fun/police/violations" target="_blank">Violations with jail time</a></p>
                             <p>When you adding new macros, it's better and faster add: first <a href="https://onestate.fun/police/macros" target="_blank">Required Macros</a> and then <a href="https://onestate.fun/police/violations" target="_blank">Violations</a></p>
