--- a/rules/index.html
+++ b/rules/index.html
@@ -130,7 +130,7 @@
                             <!-- Command Description -->
                             <p>Inside the hospital you can't arrest. (Inside the hospital is a safe place to chill out with other players.)</p>
                             <p>Outside and near the hospital is the Green zone. When you see someone breaking RP rules, like Car killing (VDM or DB), collect evidence in photo or, better yet, video form and report it to Admins.</p>
-                            <p>Don't arrest borne criminals outside HP; give them some time to breath.</p>
+                            <p>Don't arrest afk/borne criminals outside HP; give them some time to breath and play.</p>
                             </div>
                         </div>
                     </div>
@@ -228,6 +228,25 @@
                                 <!-- Command Description -->
                                 <p>You cannot do any raids or clearing wanted list missions.</p>
                                 <p>You cannot organize raids or "clearing the wanted list".</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="list-group-item">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                        <div class="card bg-grey" style="width:100%">
+                            <div class="card-body">
+                                <img class="card-img-top" src="/asset/risky-zones.jpg" alt="Risky Zones" style="width:100%">
+                            <!-- Command -->
+                            <h4 class="card-title big-text">Risky Zones</h4>
+                            <!-- Command Description -->
+                            <p><strong>🔴 RED ZONES</strong>:</p>
+                            <p>You should <strong>not</strong> go into red zones if there is not a raid going on or if you dont have a RANK 10/11/12/13 permission. They are not safe at all</p>
+                            <p><strong>🟡 YELLOW ZONES</strong>:</p>
+                            <p>is Mid-risky zones. You can go there, but at your own risk. You need be ready for any fight or shooting in those zones.</p>
+                            <p>Army Faction with SWAT Action Team will patrol yellow zones many times.</p>
                             </div>
                         </div>
                     </div>
