--- a/feedback/index.html
+++ b/feedback/index.html
@@ -114,7 +114,7 @@
                                 <!-- Command Description -->
                                 <p><strong>Contact Developer</strong>:</p>
                                 <p>Discord: <strong>thevida</strong></p>
-                                <p>Mail: <strong><a href="mailto:vida%40onestate.fun">vida&#064;onestate.fun</a></strong></p></p>
+                                <p>Mail: <strong><a href="mailto:vida%40onestate.fun?subject=Website%20Feedback">vida&#064;onestate.fun</a></strong></p></p>
 
                             </div>
                         </div>
